Infra-Clinic/k8s-manifests/development/minio/minio-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-dev-service
  namespace: ptcc-development
  labels:
    app: minio-dev
    project: "ProntDental"
    environment: "development"
spec:
  selector:
    app: minio-dev
  ports:
  - name: api
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: console
    port: 9001
    targetPort: 9001
    protocol: TCP
  type: ClusterIP
