Infra-Clinic/k8s-manifests/development/minio/minio-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dev-ingress
  namespace: ptcc-development
  labels:
    app: minio-dev
    project: "ProntClinic"
    environment: "development"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - s3-d.prontclinic.com.br
    secretName: minio-dev-tls
  rules:
  - host: s3-d.prontclinic.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-dev-service
            port:
              number: 9001
